--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <table> <!--Створення таблиці-->
     <thead><!--Викорисиовується для групування вмісту верхнього колонтитула HTML таблиці, використовується разом з елементами tbody tfoot-->
-        <tr><!--Контейнер для створення строки таблиці-->
+        <tr><!--Контейнер для створення рядка таблиці-->
             <th>Number</th><!--Створення однієї ячейки таблиці-->
             <th>Name</th>
             <th>Last Name</th>
@@ -59,7 +59,7 @@
             <td class="footer-col" colspan="4">Sign:</td><td>Alberto Rivera</td>
         </tr>
     </tfoot><!--Використовується для групування вмісту нижнього колонтитулу HTML таблиці-->
-    <tbody><!--Використовується для зберігання однієї або декількох строк таблиці-->
+    <tbody><!--Використовується для зберігання однієї або декількох рядків таблиці-->
         <tr>
             <td>1</td><!--Ячейка таблиці, яка має дані-->
             <td>David</td>
